--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,15 +1,123 @@
 @charset "UTF-8";
-*{
-	font-size: 14px;
-	font-family: "\5FAE\8F6F\96C5\9ED1", "Microsoft Yahei", "Hiragino Sans GB", tahoma, arial, "\5B8B\4F53";
+* {
+  font-size: 14px;
+  font-family: "Microsoft Yahei", "Hiragino Sans GB", tahoma, arial;
 }
 /*[placeholder]{
 	text-align: center;
 }*/
-.btn{
-	color:white;
-	padding:.5em .8em;
-	background: transparent;
-	border: 1px solid transparent;
-	border-radius:.3em;
+/**
+**菜单style
+**/
+.body {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+a {
+  text-decoration: none;
+}
+.btn {
+  color: white;
+  padding: .5em .8em;
+  background: transparent;
+  border: 1px solid transparent;
+  border-radius: .3em;
+  box-shadow: 0 0 0.1em 0 rgba(0, 0, 0, 0.1);
+  text-shaow: 0 0 0.1em rgba(0, 0, 0, 0.1);
+}
+.page-header {
+  width: 100%;
+  height: 50px;
+  background: #1E2943;
+  text-align: center;
+  border-bottom: 5px solid #404B61;
+}
+.page-header:hover {
+  background: #373D41;
+}
+.page-header .navbar {
+  text-align: center;
+  display: inline-block;
+  margin: 0px;
+}
+.page-header .navbar li {
+  display: inline-block;
+  width: 120px;
+}
+.page-header .navbar li a {
+  color: white;
+  line-height: 50px;
+  width: 100%;
+}
+.page-header .navbar li:hover {
+  border-bottom: 5px solid #00C1DE;
+}
+.page-header .logo {
+  display: inline-block;
+  line-height: 50px;
+  position: relative;
+}
+.page-header .logo a {
+  color: white;
+}
+.page-header .logo span.ani {
+  width: 30px;
+  line-height: 30px;
+  margin-right: 5px;
+  height: 30px;
+  background: linear-gradient(45deg, #00ACFE, white, #115097);
+  border-radius: 50%;
+  border: 1px solid transparent;
+  display: inline-block;
+  transform: translateZ(-15px) rotateY(90deg);
+  animation: rotateLogo 1s infinite alternate linear;
+  position: absolute;
+  top: 10px;
+  left: -40px;
+}
+@keyframes rotateLogo {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(180deg);
+  }
+}
+.site-footer {
+  width: 100%;
+  height: 50px;
+  position: relative;
+}
+.content {
+  display: flex;
+  width: 100%;
+  margin: 10px auto;
+}
+.content .markdown-textarea {
+  width: 50%;
+}
+.content .preview {
+  width: 48%;
+  border: 1px solid #DDDDDD;
+  margin-left: 2%;
+}
+.commonBody {
+  width: 90%;
+  margin: auto;
+}
+.title {
+  position: relative;
+}
+button.save-article {
+  background: #E88910;
+  position: absolute;
+  right: 10px;
+  top: -6px;
+  color: white;
+  padding: .1em .3em;
+}
+button.save-article:hover,
+button.save-article:active {
+  color: white;
 }
