--- a/static/css/index.css
+++ b/static/css/index.css
@@ -26,9 +26,10 @@ a {
   box-shadow: 0 0 0.1em 0 rgba(0, 0, 0, 0.1);
   text-shaow: 0 0 0.1em rgba(0, 0, 0, 0.1);
 }
-.page-header {
+header.page-header {
   width: 100%;
   height: 50px;
+  margin: 0px;
   background: #1E2943;
   text-align: center;
   border-bottom: 5px solid #404B61;
@@ -53,6 +54,9 @@ a {
 .page-header .navbar li:hover {
   border-bottom: 5px solid #00C1DE;
 }
+.page-header .navbar li:hover a:hover {
+  text-decoration: none;
+}
 .page-header .logo {
   display: inline-block;
   line-height: 50px;
@@ -60,6 +64,9 @@ a {
 }
 .page-header .logo a {
   color: white;
+}
+.page-header .logo a:hover {
+  text-decoration: none;
 }
 .page-header .logo span.ani {
   width: 30px;
@@ -86,8 +93,11 @@ a {
 }
 .site-footer {
   width: 100%;
-  height: 50px;
+  height: 100px;
   position: relative;
+}
+.site-footer #footer {
+  transition: 3s;
 }
 .content {
   display: flex;
@@ -104,7 +114,7 @@ a {
 }
 .commonBody {
   width: 90%;
-  margin: auto;
+  margin: 15px auto;
 }
 .title {
   position: relative;
@@ -120,4 +130,33 @@ button.save-article {
 button.save-article:hover,
 button.save-article:active {
   color: white;
+}
+span.note_tag {
+  display: inline-block;
+  position: absolute;
+  width: 15em;
+  height: 4em;
+  border: 1px solid #F9E07A;
+  border-radius: .5em;
+  right: 20px;
+  top: 25px;
+  background: #f1bc33;
+  display: none;
+  padding: 1em .5em;
+  text-align: center;
+  color: #333333;
+}
+span.note_tag:after {
+  content: '';
+  width: 10px;
+  height: 10px;
+  border: 1px solid #F9E07A;
+  border-right: 0px;
+  border-bottom: 0px;
+  transform: rotate(45deg);
+  position: absolute;
+  display: inline-block;
+  right: 15px;
+  top: -5px;
+  background: #f1bc33;
 }
